[package]
name = "pulau-rs"
version = "0.2.0"
edition = "2021"
authors = ["Budi Syahiddin <me@inve.rs>"]
homepage = "https://github.com/zeon256/pulau-rs"
repository = "https://github.com/zeon256/pulau-rs"
description = "Allocation-free UnionFind library for bare metal environments"
readme = "README.md"
license = "MIT"
keywords = ["dsu", "disjoint-set", "unionfind", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
