[package]
name = "pulau-rs"
version = "0.2.0"
edition = "2021"
authors = ["Budi Syahiddin <me@inve.rs>"]
homepage = "https://github.com/zeon256/pulau-rs"
repository = "https://github.com/zeon256/pulau-rs"
description = "allocation-free union-find library for bare metal environments"
readme = "README.md"
license = "MIT"
keywords = ["dsu", "disjoint-set", "union-find", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
heapless = "0.7.16"